<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019. Matsuda, Akihit (akihito104)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.freshdigitable.udonroad2.oauth.OauthViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_default"
        >

        <TextView
            android:id="@+id/oauth_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/oauth_explain"
            />

        <Button
            android:id="@+id/oauth_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            app:layout_constraintTop_toBottomOf="@id/oauth_explain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/oauth_login"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="@{v -> viewModel.authApp.dispatch()}"
            />

        <TextView
            android:id="@+id/oauth_explain_pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/oauth_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/oauth_pin_direction"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oauth_pin_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toBottomOf="@id/oauth_explain_pin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/oauth_send_pin"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oauth_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/oauth_hint_input_pin"
                android:inputType="numberDecimal"
                android:nextFocusUp="@id/oauth_pin"
                android:nextFocusLeft="@id/oauth_pin"
                android:text="@{viewModel.state.pinText}"
                android:afterTextChanged="@{(t) -> viewModel.inputPin.dispatch(t)}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/oauth_send_pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toBottomOf="@id/oauth_pin_layout"
            app:layout_constraintStart_toEndOf="@id/oauth_pin_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/oauth_send_pin"
            android:enabled="@{viewModel.sendPinButtonEnabled ?? false}"
            android:onClick="@{v -> viewModel.sendPin.dispatch()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
